@@ -22,7 +22,15 @@ Next<A HREF="konsole-4.html">Previous</A>
 <P>Before sending bug reports, please check the problem with another
 X terminal to find out whether it is `konsole' specific or not.
 <P>
-<H3><A NAME="ss5.1">5.1 Application related problems</A>
+<H3><A NAME="ss5.1">5.1 Installation related problems</A>
+</H3>
+
+<P>Konsole requieres some specific fonts that come along with it's
+distribution but are not installed due to the authors preference
+not claim root privileges during the installation process. You'll
+have to do this manually. See README.linux.console for details.
+<P>
+<H3><A NAME="ss5.2">5.2 Application related problems</A>
 </H3>
 
 <P>Some programs have flaws when run under a X console.
@@ -80,7 +88,7 @@ not cope well with resize events (segfault).</LI>
 </UL>
 <P>
 <P>
-<H3><A NAME="ss5.2">5.2 Broken termcap and terminfo databases</A>
+<H3><A NAME="ss5.3">5.3 Broken termcap and terminfo databases</A>
 </H3>
 
 <P>Please be aware of the fact that most applications (those using ncurses)
@@ -102,7 +110,7 @@ sequences under some circumstances (<CODE>ESC Pn C</CODE> is treated like
 </UL>
 <P>
 <P>
-<H3><A NAME="ss5.3">5.3 Problems with BACKSPACE, DELETE and likely keyboard issues.</A>
+<H3><A NAME="ss5.4">5.4 Problems with BACKSPACE, DELETE and likely keyboard issues.</A>
 </H3>
 
 <P>Once upon a time there was a terminal without a delete key.
@@ -128,14 +136,14 @@ are prefixes (i.e. are eventually to be continued with a second
 character). X11 is known to have these dead keys.
 <P>
 <P>
-<H3><A NAME="ss5.4">5.4 Color Scheme</A>
+<H3><A NAME="ss5.5">5.5 Color Scheme</A>
 </H3>
 
 <P>Because of a storm of complaints about the color scheme,
 konsole offers configurable color schemes in it's latest
 versions. A proper document on them is still missing.
 <P>
-<H3><A NAME="ss5.5">5.5 Fonts</A>
+<H3><A NAME="ss5.6">5.6 Fonts</A>
 </H3>
 
 <P>(Slightly outdated, check README.linux.console)
@@ -159,7 +167,7 @@ family, please drop me a line.</LI>
 </UL>
 <P>
 <P>
-<H3><A NAME="ss5.6">5.6 Security</A>
+<H3><A NAME="ss5.7">5.7 Security</A>
 </H3>
 
 <P>Although konsole is prepared to be installed root-suid, it is not
@@ -168,7 +176,7 @@ immediately after being started. Secure keyboard is not implemented
 and konsole does not fchown(2) the pseudo tty.
 <P>
 <P>
-<H3><A NAME="ss5.7">5.7 Known bugs (konsole-0.8.6)</A>
+<H3><A NAME="ss5.8">5.8 Known bugs (konsole-0.8.6)</A>
 </H3>
 
 <P>
@@ -182,7 +190,7 @@ install to get the key-presses.
 </UL>
 <P>
 <P>
-<H3><A NAME="ss5.8">5.8 Features that will not be implemented.</A>
+<H3><A NAME="ss5.9">5.9 Features that will not be implemented.</A>
 </H3>
 
 <P>
