@@ -42,14 +42,15 @@ Please be aware of the fact that this document is under construction.</EM>
 <H2><A NAME="toc5">5.</A> <A HREF="konsole-5.html">Bugs and FAQ</A></H2>
 
 <UL>
-<LI><A HREF="konsole-5.html#ss5.1">5.1 Application related problems</A>
-<LI><A HREF="konsole-5.html#ss5.2">5.2 Broken termcap and terminfo databases</A>
-<LI><A HREF="konsole-5.html#ss5.3">5.3 Problems with BACKSPACE, DELETE and likely keyboard issues.</A>
-<LI><A HREF="konsole-5.html#ss5.4">5.4 Color Scheme</A>
-<LI><A HREF="konsole-5.html#ss5.5">5.5 Fonts</A>
-<LI><A HREF="konsole-5.html#ss5.6">5.6 Security</A>
-<LI><A HREF="konsole-5.html#ss5.7">5.7 Known bugs (konsole-0.8.6)</A>
-<LI><A HREF="konsole-5.html#ss5.8">5.8 Features that will not be implemented.</A>
+<LI><A HREF="konsole-5.html#ss5.1">5.1 Installation related problems</A>
+<LI><A HREF="konsole-5.html#ss5.2">5.2 Application related problems</A>
+<LI><A HREF="konsole-5.html#ss5.3">5.3 Broken termcap and terminfo databases</A>
+<LI><A HREF="konsole-5.html#ss5.4">5.4 Problems with BACKSPACE, DELETE and likely keyboard issues.</A>
+<LI><A HREF="konsole-5.html#ss5.5">5.5 Color Scheme</A>
+<LI><A HREF="konsole-5.html#ss5.6">5.6 Fonts</A>
+<LI><A HREF="konsole-5.html#ss5.7">5.7 Security</A>
+<LI><A HREF="konsole-5.html#ss5.8">5.8 Known bugs (konsole-0.8.6)</A>
+<LI><A HREF="konsole-5.html#ss5.9">5.9 Features that will not be implemented.</A>
 </UL>
 <P ALIGN="RIGHT">
 
